{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 20,
  "lineage": "5e5986df-86cf-ddc3-70e1-6d4dc4c85a7c",
  "resources": [
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:network-acl/acl-00fe669c3e22bb7bf",
            "default_network_acl_id": "acl-00fe669c3e22bb7bf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00fe669c3e22bb7bf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "037356316600",
            "subnet_ids": [
              "subnet-03958f08585d5bd47",
              "subnet-039be7e55868c293b",
              "subnet-0428be16d35c1295e",
              "subnet-04fbfc62c3b48e0a3"
            ],
            "tags": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:route-table/rtb-020d97292e9c3b630",
            "default_route_table_id": "rtb-020d97292e9c3b630",
            "id": "rtb-020d97292e9c3b630",
            "owner_id": "037356316600",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:security-group/sg-097d82a471949ef89",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-097d82a471949ef89",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "037356316600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-default",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:internet-gateway/igw-04aa2d38695c24ca2",
            "id": "igw-04aa2d38695c24ca2",
            "owner_id": "037356316600",
            "tags": {
              "Name": "cloudera-vpc",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04aa2d38695c24ca2",
            "id": "r-rtb-092a01b42b15d00c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092a01b42b15d00c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:route-table/rtb-046778537b4c43f25",
            "id": "rtb-046778537b4c43f25",
            "owner_id": "037356316600",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudera-vpc-private-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-private-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:route-table/rtb-02b5ade081a853ade",
            "id": "rtb-02b5ade081a853ade",
            "owner_id": "037356316600",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudera-vpc-private-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-private-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:route-table/rtb-092a01b42b15d00c5",
            "id": "rtb-092a01b42b15d00c5",
            "owner_id": "037356316600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04aa2d38695c24ca2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudera-vpc-public",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-public",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f01566b8369b676b",
            "route_table_id": "rtb-046778537b4c43f25",
            "subnet_id": "subnet-04fbfc62c3b48e0a3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f8def93b90aaaf1",
            "route_table_id": "rtb-02b5ade081a853ade",
            "subnet_id": "subnet-039be7e55868c293b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076f2f1a5b8969a11",
            "route_table_id": "rtb-092a01b42b15d00c5",
            "subnet_id": "subnet-0428be16d35c1295e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04feb5debff252759",
            "route_table_id": "rtb-092a01b42b15d00c5",
            "subnet_id": "subnet-03958f08585d5bd47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:subnet/subnet-04fbfc62c3b48e0a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fbfc62c3b48e0a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037356316600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudera-vpc-private-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-private-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:subnet/subnet-039be7e55868c293b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039be7e55868c293b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037356316600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudera-vpc-private-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-private-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:subnet/subnet-0428be16d35c1295e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0428be16d35c1295e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037356316600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudera-vpc-public-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-public-ap-southeast-1a",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:subnet/subnet-03958f08585d5bd47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03958f08585d5bd47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037356316600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudera-vpc-public-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc-public-ap-southeast-1b",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "vpc_id": "vpc-0f627549cca881ca4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:037356316600:vpc/vpc-0f627549cca881ca4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fe669c3e22bb7bf",
            "default_route_table_id": "rtb-020d97292e9c3b630",
            "default_security_group_id": "sg-097d82a471949ef89",
            "dhcp_options_id": "dopt-50afa637",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f627549cca881ca4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020d97292e9c3b630",
            "owner_id": "037356316600",
            "tags": {
              "Name": "cloudera-vpc",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            },
            "tags_all": {
              "Name": "cloudera-vpc",
              "created_by": "Terraform",
              "environment": "your-environment",
              "owner": "your-owner"
            }
          }
        }
      ]
    }
  ]
}